# redmist-timing-scoring-backend

./: .gitignore  .gitmodules  API_DOCUMENTATION_QUICK_REFERENCE.md  API_VERSIONING_QUICK_REFERENCE.md  BUILD_FIXED.md  DOCFX_BUILD_FIXES.md  DOCFX_COMPLETE_SUMMARY.md  DOCFX_GITIGNORE_SETUP.md  DOCFX_QUICK_START.md  DOCFX_SETUP_GUIDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SETUP_SUMMARY.md  GITHUB_PAGES_DEPLOYMENT_FIX.md  GITHUB_PAGES_OPTION1_INSTRUCTIONS.md  GITIGNORE_QUICK_REF.md  MEDIATOR_MIGRATION.md  OPTION1_DEPLOYMENT_READY.md  QUICK_FIX_GITHUB_ACTIONS.md  README.md  RedMist.Backend.sln  RedMist.TimingAndScoringService.sln  SWAGGER_404_FIX.md  SWAGGER_PRODUCTION_ENABLED.md  SWAGGER_URLS_QUICK_REFERENCE.md  build-docs.ps1  docfx.json  index.md  serve-docs.ps1  toc.yml  upgrading-to-version2-api.md  version
RedMist.Backend.Shared/: Consts.cs  RedMist.Backend.Shared.csproj  StartupLoggerExtensions.cs
RedMist.ControlLogProcessor/: Dockerfile  Program.cs  RedMist.ControlLogProcessor.csproj
RedMist.ControlLogs/: ControlLogCache.cs  ControlLogFactory.cs  ControlLogType.cs  GoogleSheetsControlLogBase.cs  IControlLog.cs  IControlLogFactory.cs  PenaltyCounts.cs  RedMist.ControlLogs.csproj  SheetColumnMapping.cs
RedMist.ConvertPayloadToSessionResults/: Program.cs  RedMist.ConvertPayloadToSessionResults.csproj
RedMist.Database/: RedMist.Database.csproj  TsContext.cs  (+3 more)
samples/python/redmist-sample/: .env.example  .gitignore  README.md  __init__.py  external_telemetry.py  main.py  pyproject.toml  session_state.py  signalr_client.py  test_session_state_api.py
(+850 files in other folders)
